// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions: network endNetwork 1`] = `
Object {
  "payload": Object {
    "networkLabel": "posts",
  },
  "type": "[network] End",
}
`;

exports[`Actions: network startNetwork 1`] = `
Object {
  "payload": Object {
    "networkLabel": "posts",
  },
  "type": "[network] Start",
}
`;
